objects/Contact_Information_Buttons_ID_Mappings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stores mappings for field ID values for the following custom buttons on the object &quot;Contact Information&quot;
- New Email
- New Fax
- New Other Contact Information
- New Phone</description>
    <fields>
        <fullName>Contact_Lookup_Name__c</fullName>
        <description>This field stores the HTML generated Name value of the Contact_Information__c.Contact__c lookup field. This is typically the salesforce ID of the field. 

This is to reference where the contact name should be placed in the contact lookup field.</description>
        <label>Contact Lookup Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_URL_Id__c</fullName>
        <description>The 3 charachter object code from the URL</description>
        <label>Object URL Id</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Value_New_Email__c</fullName>
        <description>Stores the &quot;Email&quot; record type value for a contact information record</description>
        <label>Record Type Value - New Email</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Value_New_Fax__c</fullName>
        <description>Stores the &quot;Fax&quot; record type value for a contact information record</description>
        <label>Record Type Value - New Fax</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Value_New_Other_Contact_Info__c</fullName>
        <description>Stores the &quot;Other&quot; record type value for a contact information record</description>
        <label>Record Type Value - Other Contact Info</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Value_New_Phone__c</fullName>
        <description>Stores the &quot;Phone&quot; record type value for a contact information record</description>
        <label>Record Type Value - New Phone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Contact Information Buttons ID Mappings</label>
</CustomObject>